--- a/front-end/src/components/Header/header.css
+++ b/front-end/src/components/Header/header.css
@@ -73,14 +73,14 @@
 		width: 100%;
 		height: 100vh;
 		position: absolute;
-		top: 80px;
+		top: 70px;
 		left: -100%;
 		opacity: 1;
 		transition: all 0.5s ease;
 	}
 
 	.nav-menu.active {
-		background: #b95c77;
+		background: #df96ab;
 		left: 0;
 		opacity: 1;
 		transition: all 0.5s ease;
@@ -93,6 +93,7 @@
 		padding: 2rem;
 		width: 100%;
 		display: table;
+		font-size: 1.2rem;
 	}
 
 	.navbar-logo {
