--- a/front-end/src/components/Footer.css
+++ b/front-end/src/components/Footer.css
@@ -1,44 +1,67 @@
 .main-footer {
-    color: white;
-    background-color: #b95c77;
-    padding-top: 3em;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100px;
-    font-weight: bold;
-    font-size: 10px;
-  }
-  .quotes {
-    font-size: x-small;
-    font-display: padding-top;
-    font-style: "roboto";
-  }
-  
-  .icons {
-    width: auto;
-    display: inline-block;
-    line-height: 1;
-    text-decoration: none;
-    color: inherit;
-    height: 19px;
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-  .container {
-    font-weight: bold;
-    font-size: x-small;
-    font-style: roboto serif;
-    padding-top: 7em;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 60px;
-  }
-  .nav_about {
-    display: inline-block;
-    line-height: 0.5;
-  }
-  
+  color: white;
+  background-color: #b95c77;
+  padding-top: 3em;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 100px;
+  font-weight: bold;
+  font-size: 10px;
+}
+.quotes {
+  /*font-size: x-small;
+    font-display: center;
+    font-style: Roboto;
+    font-family: Roboto;*/
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 19px;
+  letter-spacing: 0em;
+  text-align: center;
+}
+
+.icon_1 {
+  /*width: auto;
+  display: inline-block;
+  line-height: 1;
+  text-decoration: none;
+  color: inherit;
+  height: 19px;
+  padding-left: 10px;
+  padding-right: 10px;*/
+  height: 31px;
+  width: 31px;
+  left: 132px;
+  top: 946px;
+  border-radius: 0px;
+}
+
+.icon_2 {
+  height: 31px;
+  width: 31px;
+  left: 180px;
+  top: 946px;
+  border-radius: 0px;
+}
+.container {
+  font-weight: bold;
+  font-size: x-small;
+  font-style: roboto serif;
+  padding-top: 7em;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 60px;
+}
+.nav_about {
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 19px;
+  letter-spacing: 0em;
+  text-align: center;
+}
