--- a/front-end/src/components/Memory/Game.css
+++ b/front-end/src/components/Memory/Game.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap');
+
 .Game {
   text-align: center;
 }
@@ -15,8 +17,7 @@
 
 .Game-status {
   padding: 10px 30px 10px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Oswald";
   font-weight: bolder;
   display: inline-flex;
   /* background-color: yellow; */
@@ -31,9 +32,10 @@
   border-color: #eedf5b;
   border-width: 5px;
   border-style: solid;
-  margin-bottom: 10px;
-  margin-left: 10px;
-  width: 100px;
+  margin-bottom: 15px;
+  margin-left: 15px;
+  width: 115px;
+  box-shadow: 2px 2px 3px 1px rgba(0, 0, 0, 0.2);
 }
 
 .Matched {
