--- a/front-end/src/components/Contact.css
+++ b/front-end/src/components/Contact.css
@@ -91,8 +91,28 @@ textarea {
 }
 
 .button {
+	border-radius: 2rem;
+	width: 150px;
+	height: 35px;
+	background-color: #efedea;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+	text-transform: uppercase;
+	font-weight: 400;
+	border: none;
+	box-shadow: 0px 8px 15px rgb(0 0 0 / 10%);
+	transition: all 0.3s ease 0s;
+	cursor: pointer;
 	justify-self: center;
 	grid-column-start: 2;
+	margin: 15px;
+}
+
+.button:hover {
+	background-color: #eedf5b;
+	box-shadow: 0px 15px 20px rgba(238, 233, 91, 0.4);
+	color: white;
+	transform: translateY(-7px);
 }
 
 @media screen and (max-width: 600px) {
