--- a/front-end/src/components/Memory/Game.css
+++ b/front-end/src/components/Memory/Game.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap");
 
 .Game {
   text-align: center;
@@ -17,10 +17,12 @@
 
 .Game-status {
   padding: 10px 30px 10px;
+  margin: 10px 0 10px 0;
   font-family: "Oswald";
+  color: #ac4e69;
   font-weight: bolder;
   display: inline-flex;
-  /* background-color: yellow; */
+  background-color: #eedf5b;
 }
 
 .Game-intro {
