--- a/front-end/src/components/Footer.css
+++ b/front-end/src/components/Footer.css
@@ -31,37 +31,35 @@
   height: 19px;
   padding-left: 10px;
   padding-right: 10px;*/
-  height: 31px;
-  width: 31px;
-  left: 132px;
-  top: 946px;
-  border-radius: 0px;
+height: 31px;
+width: 31px;
+left: 132px;
+top: 946px;
+border-radius: 0px;
 }
 
-.icon_2 {
-  height: 31px;
-  width: 31px;
-  left: 180px;
-  top: 946px;
-  border-radius: 0px;
+.icon_2{
+height: 31px;
+width: 31px;
+left: 200px;
+top: 946px;
+border-radius: 0px;
+
+
 }
 .container {
   font-weight: bold;
   font-size: x-small;
   font-style: roboto serif;
-  padding-top: 7em;
-  position: fixed;
+  position: center;
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 60px;
+  height: 60px; 
 }
+
+
 .nav_about {
-  font-family: Roboto;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 300;
-  line-height: 19px;
-  letter-spacing: 0em;
-  text-align: center;
+  display: inline-block;
+  line-height: 0.5;
 }
