--- a/front-end/src/components/About.css
+++ b/front-end/src/components/About.css
@@ -2,49 +2,41 @@ body {
   background-color: white;
 }
 
-.title {
-  height: 64px;
-  width: 322px;
-  top: 107px;
-  border-radius: nullpx;
-  color: #c56379;
-  font-family: Oswald;
-  font-size: 40px;
-  font-style: normal;
-  font-weight: 300;
-  line-height: 59px;
-  letter-spacing: 0em;
-  text-align: center;
+.container-title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+.about-us {
+  width: 100%;
+  height: auto;
+  padding: 18px;
 }
 
-.Anna {
-  position: absolute;
-  width: 147px;
-  height: 211px;
-  left: 46px;
-  top: 200px;
+.us-cards {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+img {
+  width: 40%;
+  padding: 5px;
+}
+/*.Anna {
+  width: 20%;
 }
 .Alessandra {
-  position: absolute;
-  width: 147px;
-  height: 211px;
-  left: 220px;
-  top: 200px;
+  width: 20%;
 }
 .Helen {
-  position: absolute;
-  width: 147px;
-  height: 211px;
-  left: 220px;
-  top: 440px;
+  width: 20%;
 }
 .Silvia {
-  position: absolute;
-  width: 147px;
-  height: 211px;
-  left: 46px;
-  top: 440px;
-}
+  width: 20%;
+}*/
 
 .biography {
   position: absolute;
