--- a/front-end/src/components/GameIntroPage.css
+++ b/front-end/src/components/GameIntroPage.css
@@ -1,9 +1,12 @@
-.body {
+@media screen and (max-width: 600px) {
+  .page-gameintro {
+    position: relative;
+    height: 40vh;
     background-image: url("https://res.cloudinary.com/dg5lakmem/image/upload/v1618912507/Bright%20Flash/background.jpg");
   }
-  
+
   .selection-lev {
-    position: absolute;
+    position: relative;
     width: 277px;
     height: 128px;
     left: 74px;
@@ -12,16 +15,15 @@
     border-radius: 21px;
   }
   h5 {
-  font-family: Oswald;
-  font-size: 36px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 53px;
-  letter-spacing: 0em;
-  text-align: center;
-  color: #c56379;
-  
-  
+    font-family: Oswald;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 53px;
+    letter-spacing: 0em;
+    text-align: center;
+    color: #c56379;
+
     /*font-family: Oswald;
     font-style: normal;
     font-weight: bold;
@@ -30,7 +32,7 @@
     text-align: center;
     color: #c56379;*/
   }
-  
+
   .btn-one {
     position: absolute;
     width: 233px;
@@ -47,7 +49,7 @@
     height: 53px;
     left: 94px;
     top: 472px;
-  
+
     background: #f0edea;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 30px;
@@ -58,7 +60,7 @@
     height: 53px;
     left: 94px;
     top: 557px;
-  
+
     background: #f0edea;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 30px;
@@ -69,9 +71,9 @@
     height: 53px;
     left: 91px;
     top: 642px;
-  
+
     background: #f0edea;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 30px;
   }
-  
+}
