Add component for mobile version of homepage. Style accordingly

--- a/front-end/src/components/Home/Home.css
+++ b/front-end/src/components/Home/Home.css
@@ -14,17 +14,12 @@ span {
 	cursor: pointer;
 }
 
-.wrapper {
-	display: grid;
-	justify-content: center;
-	align-items: center;
-}
-
 .dropdown-menu {
 	display: grid;
 	position: relative;
 	grid-template-columns: repeat(5, auto);
 	top: 30px;
+	text-align: center;
 }
 
 .item-image {
