--- a/front-end/src/components/Home/Home.css
+++ b/front-end/src/components/Home/Home.css
@@ -27,3 +27,67 @@ span {
 	position: relative;
 	z-index: 2;
 }
+
+.test-mobile {
+	display: none;
+}
+
+.mobile-title {
+	display: none;
+}
+
+.mobile-intro {
+	display: none;
+}
+
+.play-now {
+	display: none;
+}
+
+@media screen and (max-width: 600px) {
+	.image-map__content__img {
+		display: none;
+	}
+
+	.mobile-pic {
+		display: grid;
+		width: 100%;
+		height: auto;
+	}
+
+	.mobile-title {
+		display: grid;
+		font-family: Oswald;
+		justify-content: center;
+		padding: 20px;
+		color: #b95c77;
+		font-weight: bold;
+		text-shadow: 2px 2px 2px #eedf5b;
+	}
+
+	.mobile-intro {
+		display: grid;
+		text-align: center;
+		padding: 0px 20px 20px 20px;
+		font-size: 13px;
+		font-size: 17px;
+	}
+
+	.play-now {
+		display: grid;
+		border-radius: 2rem;
+		width: 150px;
+		height: 35px;
+		background-color: #efedea;
+		font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+			Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+		text-transform: uppercase;
+		font-weight: 400;
+		border: none;
+		box-shadow: 0px 8px 15px rgb(0 0 0 / 10%);
+		transition: all 0.3s ease 0s;
+		cursor: pointer;
+		padding: 10px;
+		margin: 20px;
+	}
+}
