--- a/front-end/src/components/About.css
+++ b/front-end/src/components/About.css
@@ -1,31 +1,33 @@
-body {
-  background-color: white;
-}
 
-.container-title {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  flex-wrap: wrap;
-}
-.about-us {
-  width: 100%;
-  height: auto;
-  padding: 18px;
-}
+@media screen and (max-width: 600px) {
+  body {
+    background-color: white;
+  }
 
-.us-cards {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-}
-img {
-  width: 40%;
-  padding: 5px;
-}
-/*.Anna {
+  .container-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+  .about-us {
+    width: 100%;
+    height: auto;
+    padding: 18px;
+  }
+
+  .us-cards {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  img {
+    width: 40%;
+    padding: 5px;
+  }
+  /*.Anna {
   width: 20%;
 }
 .Alessandra {
@@ -38,19 +40,20 @@ img {
   width: 20%;
 }*/
 
-.biography {
-  position: absolute;
-  width: 321px;
-  height: 210px;
+  .biography {
+    position: absolute;
+    width: 321px;
+    height: 210px;
 
-  top: 689px;
+    top: 689px;
 
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 300;
-  font-size: 20px;
-  line-height: 23px;
-  text-align: center;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 23px;
+    text-align: center;
 
-  color: #000000;
+    color: #000000;
+  }
 }
