--- a/front-end/src/components/Contact.css
+++ b/front-end/src/components/Contact.css
@@ -7,113 +7,36 @@
   padding: 0;
 }
 
-.form-page {
+.container {
   display: grid;
-  align-items: center;
-  justify-content: space-evenly;
-  grid-auto-flow: dense;
-}
 
-.image-container {
-  grid-column-start: 1;
-  justify-self: center;
+  grid-template-columns: 2fr, repeat(2, 200px), 2fr;
+  grid-template-rows: 1fr, repeat(2, 2fr), 1fr;
 }
 
 .contact-image {
-  justify-content: center;
-  width: 70vh;
-}
-
-.text-container {
-  display: none;
-  /* display: grid;
-	justify-content: center;
-	align-items: center;
-	padding: 35px;
-	grid-column-start: 2; */
-}
-
-.contact-caption {
-  justify-self: center;
-  align-self: start;
-  width: 30vh;
-  height: auto;
-  padding: 18px;
   grid-column-start: 2;
+  height: auto;
+  width: auto;
 }
 
-.form-container {
-  display: grid;
-  grid-gap: 10px;
-  justify-self: center;
+. contact-caption {
   grid-column-start: 2;
   grid-row-start: 1;
-  padding-top: 10px;
-  margin-right: 100px;
 }
 
-.form-box {
-  grid-column-start: 2;
-}
+/* .form-page {
+  grid-column-start: 3;
+  grid-row-start: ;
+  height: auto;
+  width: auto;
+} */
 
-label {
-  display: grid;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  justify-items: center;
-  padding: 18px;
-  font-size: 1.1rem;
-}
-
-input,
-textarea {
-  padding-left: 15px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-
-#name,
-#email {
-  border-radius: 0.8rem;
-  width: 320px;
-  height: 50px;
-  border: none;
-  box-shadow: 0px 8px 15px rgb(0 0 0 / 10%);
-  justify-self: center;
-}
-
-#message {
-  border-radius: 0.8rem;
-  width: 320px;
-  height: 120px;
-  border: none;
-  box-shadow: 0px 8px 15px rgb(0 0 0 / 10%);
-  justify-self: center;
-}
-
-.button {
-  border-radius: 2rem;
-  width: 150px;
-  height: 35px;
-  background-color: #efedea;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  text-transform: uppercase;
-  font-weight: 400;
-  border: none;
-  box-shadow: 0px 8px 15px rgb(0 0 0 / 10%);
-  transition: all 0.3s ease 0s;
-  cursor: pointer;
-  justify-self: center;
-  grid-column-start: 2;
-  margin: 15px;
-}
-
-.button:hover {
-  background-color: #eedf5b;
-  box-shadow: 0px 15px 20px rgba(238, 233, 91, 0.4);
-  color: white;
-  transform: translateY(-7px);
+.input {
+  grid-column-start: 3;
+  grid-row-start: 1;
+  width: 601px;
+  height: 40px;
 }
 
 @media screen and (max-width: 600px) {
