--- a/front-end/src/components/Contact.css
+++ b/front-end/src/components/Contact.css
@@ -8,35 +8,139 @@
 }
 
 .container {
-  display: grid;
-
-  grid-template-columns: 2fr, repeat(2, 200px), 2fr;
-  grid-template-rows: 1fr, repeat(2, 2fr), 1fr;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .contact-image {
-  grid-column-start: 2;
-  height: auto;
-  width: auto;
+  left: 50%;
+  padding: 0px;
+  margin-top: -1vh;
+  margin-left: -50vw;
+  margin-right: -50vw;
+  max-width: 100vw;
+  position: relative;
+  right: 50%;
+  width: 100vw;
+  height: 75vh;
 }
 
-. contact-caption {
-  grid-column-start: 2;
-  grid-row-start: 1;
+.contact-caption {
+  height: 100%;
+  width: 100%;
 }
 
-/* .form-page {
-  grid-column-start: 3;
-  grid-row-start: ;
-  height: auto;
-  width: auto;
-} */
+.contact-text {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 19px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 19px;
+  letter-spacing: 0em;
+  text-align: center;
+}
+
+.form-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
 .input {
-  grid-column-start: 3;
-  grid-row-start: 1;
-  width: 601px;
-  height: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.form-control {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  justify-content: space-between;
+  width: 200%;
+  margin: 10px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.button {
+  cursor: pointer;
+  position: relative;
+  padding: 1rem 3rem;
+  border-radius: 6.75rem;
+  line-height: 1rem;
+  font-size: 1rem;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 10px;
+
+  border: 1px solid #012880;
+  background-image: linear-gradient(-180deg, #c56379 0%, #c56379 100%);
+  /* box-shadow: 0 1rem 1.25rem 0 #C56379(22, 75, 195, 0.5), */
+  /* 0 -0.25rem 1.5rem rgba(110, 15, 155, 1) inset,
+    0 0.75rem 0.5rem rgba(255, 255, 255, 0.4) inset,
+    0 0.25rem 0.5rem 0 rgba(180, 70, 207, 1) inset; */
+}
+
+.button span {
+  color: transparent;
+  background-image: linear-gradient(0deg, #fefafd 0%, #fefafd 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.button::before {
+  content: "";
+  display: block;
+  height: 0.25rem;
+  position: absolute;
+  top: 0.5rem;
+  left: 50%;
+  transform: translateX(-50%);
+  width: calc(100% - 7.5rem);
+  background: #fff;
+  border-radius: 100%;
+
+  opacity: 0.7;
+  background-image: linear-gradient(
+    -270deg,
+    rgba(255, 255, 255, 0) 0%,
+    #ffffff 20%,
+    #ffffff 80%,
+    rgba(255, 255, 255, 0) 100%
+  );
+}
+
+.button::after {
+  content: "";
+  display: block;
+  height: 0.25rem;
+  position: absolute;
+  bottom: 0.75rem;
+  left: 50%;
+  transform: translateX(-50%);
+  width: calc(100% - 7.5rem);
+  background: #fff;
+  border-radius: 100%;
+
+  filter: blur(1px);
+  opacity: 0.05;
+  background-image: linear-gradient(
+    -270deg,
+    rgba(255, 255, 255, 0) 0%,
+    #ffffff 20%,
+    #ffffff 80%,
+    rgba(255, 255, 255, 0) 100%
+  );
 }
 
 @media screen and (max-width: 600px) {
@@ -91,7 +195,7 @@
     grid-gap: 20px;
     grid-column-start: 1;
     grid-row-start: 2;
-    padding-top: 20px;
+
     margin-right: 0px;
   }
 
