--- a/front-end/src/components/Memory/Game.css
+++ b/front-end/src/components/Memory/Game.css
@@ -2,6 +2,9 @@
 
 .Game {
   text-align: center;
+  background-image: url("https://i.imgur.com/25ehEmx.jpg");
+
+  background-repeat: cover;
 }
 
 .Game-header {
@@ -23,7 +26,7 @@
   font-weight: bolder;
   display: inline-flex;
   background-color: #eedf5b;
-  /* -webkit-border-radius: 30px; */
+  border-radius: 30px;
 }
 
 .Game-intro {
