--- a/front-end/src/components/About.css
+++ b/front-end/src/components/About.css
@@ -86,9 +86,10 @@ body {
 .about-us {
   display: flex;
   justify-content: end;
-  width: 100%;
+  width: 70%;
   height: auto;
   padding: 18px;
+  margin-right: 30%;
 }
 
 .us-cards1 {
@@ -98,6 +99,8 @@ body {
   justify-content: flex-start;
   align-items: center;
   flex-wrap: wrap;
+  margin-top: 80px;
+  margin-left: 50px;
 }
 .us-cards2 {
   display: flex;
@@ -107,6 +110,7 @@ body {
   align-items: center;
   flex-wrap: wrap;
   margin-bottom: 6em;
+  margin-left: 50px;
 }
 
 .Anna {
@@ -140,6 +144,7 @@ body {
   font-size: 20px;
   line-height: 23px;
   text-align: center;
+  margin-right: 30%;
 
   color: #000000;
 }
