--- a/front-end/src/components/Contact.css
+++ b/front-end/src/components/Contact.css
@@ -9,28 +9,27 @@
 
 .container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-start;
 }
 
 .contact-image {
-  left: 50%;
-  padding: 0px;
-  margin-top: -1vh;
-  margin-left: -50vw;
-  margin-right: -50vw;
-  max-width: 100vw;
-  position: relative;
-  right: 50%;
-  width: 100vw;
-  height: 77vh;
+  max-width: 50vw;
+  height: 100vh;
+  margin-top: 0px;
+  margin-left: 0px;
+  
+}
+.form-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .contact-caption {
   height: 100%;
   width: 100%;
-}
+} 
 
 .contact-text {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
@@ -40,14 +39,7 @@
   font-weight: 300;
   line-height: 19px;
   letter-spacing: 0em;
-  text-align: center;
-}
-
-.form-page {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  margin-bottom: 20px;
 }
 
 .input {
@@ -58,14 +50,15 @@
 }
 
 .form-control {
+  flex: 1;
   display: flex;
   flex-direction: column;
   align-self: center;
   justify-content: space-between;
-  width: 200%;
+  width: 170%;
   margin: 10px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+ Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; 
 }
 
 .button {
