--- a/front-end/src/components/Memory/Game.css
+++ b/front-end/src/components/Memory/Game.css
@@ -29,6 +29,17 @@
   border-radius: 30px;
 }
 
+.playAgain {
+  background-color: #ac4e69;
+  color: white;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  border-radius: 30px;
+  border: none;
+  padding-left: 10px;
+  text-align: center;
+  height: 30px;
+}
+
 .Game-intro {
   font-size: large;
 }
