--- a/front-end/src/components/Memory/Game.css
+++ b/front-end/src/components/Memory/Game.css
@@ -22,22 +22,21 @@
   padding: 10px 30px 10px;
   margin: 10px 0 10px 0;
   font-family: "Oswald";
-  color: #ac4e69;
+  color: #b95c77;
   font-weight: bolder;
   display: inline-flex;
   background-color: #eedf5b;
   border-radius: 30px;
 }
-
-.playAgain {
-  background-color: #ac4e69;
-  color: white;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+.gameComplete {
+  padding: 10px 30px 10px;
+  margin: 10px 0 10px 0;
+  font-family: "Oswald";
+  color: #59805c;
+  font-weight: bolder;
+  display: inline-flex;
+  background-color: #eedf5b;
   border-radius: 30px;
-  border: none;
-  padding-left: 10px;
-  text-align: center;
-  height: 30px;
 }
 
 .Game-intro {
