--- a/front-end/src/components/Header/header.css
+++ b/front-end/src/components/Header/header.css
@@ -10,7 +10,7 @@
 .navbar-items {
 	background-color: #b95c77;
 	display: flex;
-	justify-content: center;
+	justify-content: space-between;
 	align-items: center;
 	padding: 18px;
 }
