--- a/front-end/src/components/Women-Info/womenInfo.css
+++ b/front-end/src/components/Women-Info/womenInfo.css
@@ -1,7 +1,108 @@
-.women-cards {
-	display: block;
+@import url("https://fonts.googleapis.com/css2?family=Oswald&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
+
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 
-.hide {
-	display: none;
+.all-women {
+	display: grid;
+	justify-content: center;
+	align-items: center;
+	margin-top: 10px;
+}
+
+.card-container {
+	display: grid;
+	grid-template-columns: repeat(4, auto);
+}
+
+.women-cards {
+	display: block;
+	width: 70%;
+	margin: 15px;
+}
+
+.woman-page {
+	display: grid;
+	grid-template-columns: auto auto;
+	margin: 2.5rem;
+}
+
+.first-column {
+	display: grid;
+	justify-content: center;
+	align-items: center;
+	grid-column-start: 1;
+}
+
+.second-column {
+	display: grid;
+	justify-content: center;
+	align-items: start;
+	grid-column-start: 2;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+	padding: 2rem;
+}
+
+.info-img {
+	display: grid;
+	width: 100%;
+	height: auto;
+	justify-self: center;
+	align-self: center;
+}
+
+.women-title {
+	font-size: 1.5rem;
+	align-self: center;
+	justify-self: center;
+	text-align: center;
+}
+
+.women-name {
+	font-size: 2rem;
+	align-self: center;
+	justify-self: center;
+	text-align: center;
+	text-transform: uppercase;
+	font-family: Oswald;
+	font-weight: bolder;
+	text-shadow: -4px 0 #eedf5b;
+	color: #b95c77;
+}
+
+.women-nationality,
+.women-contribution {
+	font-size: 1rem;
+	align-self: start;
+	justify-self: center;
+	text-align: center;
+	white-space: wrap;
+}
+
+.women-years {
+	font-size: 1rem;
+	align-self: center;
+	justify-self: center;
+	text-align: center;
+	white-space: nowrap;
+}
+.women-contribution {
+	text-align: justify;
+	text-justify: inter-word;
+	padding: 0rem 1rem 0rem 1rem;
+}
+
+@media screen and (max-width: 600px) {
+	.card-container {
+		grid-template-columns: repeat(2, auto);
+	}
+
+	.women-cards {
+		margin: 5px;
+	}
 }
