--- a/front-end/src/components/Footer/Footer.css
+++ b/front-end/src/components/Footer/Footer.css
@@ -3,22 +3,23 @@
 
 /*--------Desktop--------*/
 .footerpage-container {
-  position: relative;
-  height: 30vh;
+  position: unset;
+  height: 20vh;
 }
 
 .main-footer {
   color: white;
   background-color: #b95c77;
   padding: 18px;
-
-  position: absolute;
   bottom: 0;
   width: 100%;
   font-weight: bold;
   font-size: 10px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+  Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  text-align: center;
 }
-.FooterQuote {
+.quotes {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 19px;
@@ -66,7 +67,7 @@ h2 {
 @media screen and (max-width: 600px) {
   .footerpage-container {
     position: relative;
-    height: 20vh;
+    height: 15vh;
   }
 
   .main-footer {
@@ -74,14 +75,14 @@ h2 {
     background-color: #b95c77;
     padding-top: 2em;
     padding-bottom: 2em;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
     font-weight: bold;
     font-size: 10px;
   }
 
-  .FooterQuote {
+  .quotes {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
       Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     font-size: 16px;
@@ -122,7 +123,4 @@ h2 {
       Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     font-weight: initial;
   }
-}
-
-.FooterQuote {
 }
