--- a/front-end/src/components/GameIntroPage.css
+++ b/front-end/src/components/GameIntroPage.css
@@ -2,7 +2,7 @@
   .page-gameintro {
     position: relative;
     height: 15vh;
-    background-image: url("https://res.cloudinary.com/dg5lakmem/image/upload/v1618912507/Bright%20Flash/background.jpg");
+    background-image: url("https://i.imgur.com/25ehEmx.jpg");
   }
 
   .selection-lev {
@@ -82,7 +82,7 @@
 .page-gameintro {
   position: relative;
   height: 100vh;
-  background-image: url("https://res.cloudinary.com/dg5lakmem/image/upload/v1618912507/Bright%20Flash/background.jpg");
+  background-image: url("https://i.imgur.com/25ehEmx.jpg");
 }
 
 .selection-lev {
@@ -166,7 +166,7 @@ h5 {
     grid-auto-flow: dense;
     position: relative;
     height: 100vh;
-    background-image: url("https://res.cloudinary.com/dg5lakmem/image/upload/v1618912507/Bright%20Flash/background.jpg");
+    background-image: url("https://i.imgur.com/25ehEmx.jpg");
   }
 
   .selection-lev {
