--- a/front-end/src/components/Memory/Game.css
+++ b/front-end/src/components/Memory/Game.css
@@ -1,10 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap");
 
 .Game {
+  /* background-image: url("https://i.imgur.com/25ehEmx.jpg"); */
   text-align: center;
-  background-image: url("https://i.imgur.com/25ehEmx.jpg");
-
-  background-repeat: cover;
+  /* background-position: center; */
+  /* background-size:cover */
+  /* background-repeat: cover; */
 }
 
 .Game-header {
