--- a/front-end/src/components/Memory/Memory.css
+++ b/front-end/src/components/Memory/Memory.css
@@ -2,42 +2,46 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
 
 * {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 .button-container {
-	display: grid;
-	justify-content: center;
-	align-items: center;
-	grid-gap: 30px;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  grid-gap: 30px;
 }
 
 .button {
-	border-radius: 2rem;
-	width: 150px;
-	height: 35px;
-	background-color: #efedea;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-	text-transform: uppercase;
-	font-weight: 400;
-	border: none;
-	box-shadow: 0px 8px 15px rgb(0 0 0 / 10%);
-	transition: all 0.3s ease 0s;
-	cursor: pointer;
+  border-radius: 2rem;
+  width: 150px;
+  height: 35px;
+  background-color: #efedea;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  text-transform: uppercase;
+  font-weight: 400;
+  border: none;
+  box-shadow: 0px 8px 15px rgb(0 0 0 / 10%);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
 }
 
 .button:hover {
-	background-color: #eedf5b;
-	box-shadow: 0px 15px 20px rgba(238, 233, 91, 0.4);
-	color: white;
-	transform: translateY(-7px);
+  background-color: #eedf5b;
+  box-shadow: 0px 15px 20px rgba(238, 233, 91, 0.4);
+  color: white;
+  transform: translateY(-7px);
+}
+
+.Memory {
+  background-image: url("https://i.imgur.com/25ehEmx.jpg");
 }
 
 @media screen and (max-width: 600px) {
-	body {
-		background-image: url("https://res.cloudinary.com/dg5lakmem/image/upload/v1618912507/Bright%20Flash/background.jpg");
-	}
+  body {
+    background-image: url("https://res.cloudinary.com/dg5lakmem/image/upload/v1618912507/Bright%20Flash/background.jpg");
+  }
 }
