--- a/front-end/src/components/Memory/Memory.css
+++ b/front-end/src/components/Memory/Memory.css
@@ -36,8 +36,10 @@
   transform: translateY(-7px);
 }
 
-.Memory {
+.gameContainer {
   background-image: url("https://i.imgur.com/25ehEmx.jpg");
+  background-position: center; 
+  background-size:contain
 }
 
 @media screen and (max-width: 600px) {
