--- a/front-end/src/components/Memory/Game.css
+++ b/front-end/src/components/Memory/Game.css
@@ -36,13 +36,12 @@
   height: 60px;
   font-family: "Oswald";
   font-size: 20px;
-  color: #59805c;
+  color: #b95c77;
   font-weight: bolder;
   display: inline-flex;
   background-color: #eedf5b;
   border-radius: 30px;
   box-shadow: 1px 1px 8px 3px rgb(255, 243, 75);
-  
 }
 
 .Game-intro {
