--- a/front-end/src/components/About.css
+++ b/front-end/src/components/About.css
@@ -41,8 +41,10 @@
 }
 
 .title {
-  justify-content: center;
+  justify-content: left;
   margin-top: -29px;
+  margin-left: -10px;
+
 }
 
 .text {
@@ -60,8 +62,8 @@
 @media screen and (max-width: 600px) {
   .wrapper {
     display: grid;
-    grid-template-columns: 1rem 300px 1rem;
-    grid-template-rows: 150px repeat(5, 320px);
+    grid-template-columns: 1rem auto 1rem;
+    grid-template-rows: repeat(6, 370px) 20px;
     grid-gap: 5px;
     align-items: center;
     justify-items: center;
@@ -69,39 +71,58 @@
 
   .Anna {
     grid-column-start: 2;
-    grid-row-start: 4;
-    height: 320px;
+    grid-row-start: 3;
+    height: auto;
     width: 250px;
   }
   .Alessandra {
     grid-column-start: 2;
-    grid-row-start: 5;
-    height: 320px;
+    grid-row-start: 4;
+    height: auto;
     width: 250px;
   }
   .Helen {
     grid-column-start: 2;
     grid-column-end: 2;
-    grid-row-start: 6;
-    height: 320px;
+    grid-row-start: 5;
+    height: auto;
     width: 250px;
   }
   .Silvia {
     grid-column-start: 2;
-    grid-row-start: 7;
-    height: 320px;
+    grid-row-start: 6;
+    height: auto;
     width: 250px;
   }
 
-  /* .text-container {
+  .text-container {
+    grid-column-start: 3;
+    width: 200%; 
+    margin-top: -100px; 
+  }
+
+  .title {
     grid-column-start: 2;
-    word-wrap: break-word;
-  word-break: break-all;
-  grid-row-start: 2;
+    grid-column-end: 2;
+    width: 300%;
+    margin-top: -330px; 
+
   }
 
   .text {
-    word-wrap: break-word;
-  word-break: break-all;
-  } */
+    grid-column-start: 2;
+    grid-column-end: 3;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 1.6;
+    letter-spacing: 0em;
+    text-align: left;
+    width: 280%;
+    margin-left: 15px;
+    margin-right: -5px;
+    margin-top: -260px;
+  }
 }
