--- a/front-end/src/components/GameIntroPage.css
+++ b/front-end/src/components/GameIntroPage.css
@@ -44,6 +44,7 @@
     background: #f1eaea;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 30px;
+    border: none;
   }
   .btn-two {
     position: absolute;
@@ -51,10 +52,10 @@
     height: 53px;
     left: 70px;
     top: 450px;
-
     background: #f0edea;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 30px;
+    border: none;
   }
   .btn-three {
     position: absolute;
@@ -62,10 +63,10 @@
     height: 53px;
     left: 70px;
     top: 550px;
-
     background: #f0edea;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 30px;
+    border: none;
   }
   .btn-four {
     position: absolute;
@@ -73,13 +74,17 @@
     height: 53px;
     left: 70px;
     top: 650px;
-
     background: #f0edea;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 30px;
+    border: none;
   }
 }
 
+.instructions {
+  background-color: #f1df68;
+  
+}
 
 .selection-lev {
   position: relative;
