--- a/front-end/src/components/Memory/Game.css
+++ b/front-end/src/components/Memory/Game.css
@@ -21,7 +21,7 @@
 
 .Game-status {
   padding: 10px 30px 10px;
-  margin: 10px 0 10px 0;
+  margin: 20px 0 20px 0;
   font-family: "Oswald";
   color: #b95c77;
   font-weight: bolder;
@@ -68,10 +68,12 @@
   justify-content: center;
   align-items: center;
   grid: 120px /auto auto; */
-  
+
   display: inline-block;
   max-width: 950px;
   margin: "20px auto";
+
+  /* display: flex;
+  flex-wrap: wrap;
+  align-items: center; */
 }
-
-
