--- a/front-end/src/components/About.css
+++ b/front-end/src/components/About.css
@@ -102,16 +102,18 @@
   }
 
   .title {
-    grid-column-start: 2;
+    grid-column-start: 1;
     grid-column-end: 2;
     width: 300%;
-    margin-top: -330px; 
+    margin-top: -320px;
+    margin-left: 10px;
+    align-content: center; 
 
   }
 
   .text {
-    grid-column-start: 2;
-    grid-column-end: 3;
+    grid-column-start: 1;
+    grid-column-end: 2;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
       Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     font-size: 15px;
@@ -119,10 +121,10 @@
     font-weight: 300;
     line-height: 1.6;
     letter-spacing: 0em;
-    text-align: left;
+    text-align: justify;
     width: 280%;
-    margin-left: 15px;
-    margin-right: -5px;
+     margin-left: 15px;
+    margin-right: -10px; 
     margin-top: -260px;
   }
 }
