--- a/front-end/src/components/GameIntroPage.css
+++ b/front-end/src/components/GameIntroPage.css
@@ -1,9 +1,10 @@
 @media screen and (max-width: 600px) {
-  
   .page-gameintro {
     position: relative;
     height: 100vh;
     background-image: url("https://i.imgur.com/25ehEmx.jpg");
+    background-position: center;
+    background-size: cover;
   }
 
   .selection-lev {
