--- a/front-end/src/components/Memory/Memory.css
+++ b/front-end/src/components/Memory/Memory.css
@@ -7,6 +7,12 @@
   padding: 0;
 }
 
+.gameContainer {
+  background-image: url("https://i.imgur.com/25ehEmx.jpg");
+  background-position: center;
+  background-size: cover;
+}
+
 .button-container {
   display: grid;
   justify-content: center;
