--- a/front-end/src/components/Memory/Memory.css
+++ b/front-end/src/components/Memory/Memory.css
@@ -42,8 +42,10 @@
   transform: translateY(-7px);
 }
 
-@media screen and (max-width: 600px) {
-  body {
-    background-image: url("https://res.cloudinary.com/dg5lakmem/image/upload/v1618912507/Bright%20Flash/background.jpg");
+@media (min-width: 1281px) {
+  .gameContainer {
+    background-image: url("https://i.imgur.com/d62Jtrf.jpg");
+    background-position: center;
+    background-size: cover;
   }
 }
