--- a/front-end/src/components/GameIntroPage.css
+++ b/front-end/src/components/GameIntroPage.css
@@ -29,44 +29,44 @@
   }
 
   .btn-one {
-    position: absolute;
+    /* position: absolute; */
     width: 240px;
     height: 53px;
-    left: 70px;
-    top: 350px;
+    /* left: 70px;
+    top: 350px; */
     background: #f1eaea;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 30px;
     border: none;
   }
   .btn-two {
-    position: absolute;
+    /* position: absolute; */
     width: 240px;
     height: 53px;
-    left: 70px;
-    top: 450px;
+    /* left: 70px;
+    top: 450px; */
     background: #f0edea;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 30px;
     border: none;
   }
   .btn-three {
-    position: absolute;
+    /* position: absolute; */
     width: 240px;
     height: 53px;
-    left: 70px;
-    top: 550px;
+    /* left: 70px;
+    top: 550px; */
     background: #f0edea;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 30px;
     border: none;
   }
   .btn-four {
-    position: absolute;
+    /* position: absolute; */
     width: 240px;
     height: 53px;
-    left: 70px;
-    top: 650px;
+    /* left: 70px;
+    top: 650px; */
     background: #f0edea;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 30px;
@@ -144,7 +144,6 @@ h5 {
 .buttonsGroup {
   margin: 0 200px 0 30px;
 }
-
 
 /*-------desktop version----------*/
 @media (min-width: 1281px) {
