--- a/front-end/src/components/About.css
+++ b/front-end/src/components/About.css
@@ -8,6 +8,7 @@
 }
 
 .img-wrapper {
+  margin-top: 50px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
@@ -28,13 +29,12 @@
 .title {
   height: 10vw;
   width: auto;
- 
-  margin-bottom: -100px;
-  margin-left: 10px;
+
+  margin-left: 150px;
+  align-self: center;
 }
 
 .text {
-
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 1.5vw;
@@ -42,8 +42,8 @@
   font-weight: 300;
   line-height: 1.6;
   letter-spacing: 0em;
-  text-align: left;
-  /* text-align is justifed left for accessibility purposes - centered or jsutified text is a lot less readable */
+  text-align: justify;
+ 
 }
 /* for mobile */
 @media screen and (max-width: 600px) {
