--- a/front-end/src/components/About.css
+++ b/front-end/src/components/About.css
@@ -1,28 +1,20 @@
 @import url("https://fonts.googleapis.com/css2?family=Oswald&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
 
-body {
-  background: url("https://res.cloudinary.com/octavian2111/image/upload/v1620120519/d62Jtrf_b4jbaq.jpg")
-    no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
 /* for desktop */
+
 .wrapper {
   display: flex;
 }
 
 .img-wrapper {
-  margin-top: 50px;
+  margin: 50px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
 
 .img {
-  height: 350px;
+  height: auto;
   width: auto;
   margin: 20px;
   margin-right: -10px;
@@ -31,27 +23,32 @@ body {
 .text-container {
   display: flex;
   flex-direction: column;
-  margin: 2vw;
+  align-items: center;
+  margin: 100px;
 }
 
-.title {
-  height: 10vw;
-  width: auto;
-
-  margin-left: 150px;
+.about-us {
+  font-size: 3rem;
   align-self: center;
+  justify-self: center;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: Oswald;
+  font-weight: bolder;
+  text-shadow: -4px 0 #eedf5b;
+  color: #b95c77;
+  padding: 2rem;
 }
 
 .text {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 1.5vw;
+  font-size: 1vw;
   font-style: normal;
   font-weight: 300;
   line-height: 1.6;
   letter-spacing: 0em;
   text-align: justify;
- 
 }
 
 /* for mobile */
