--- a/front-end/src/components/Footer/Footer.css
+++ b/front-end/src/components/Footer/Footer.css
@@ -1,62 +1,47 @@
 @import url("https://fonts.googleapis.com/css2?family=Oswald&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
 
-/*--------Desktop--------*/
-.footerpage-container {
-	display: flex;
-	justify-content: center;
-	text-align: center;
-	height: 20vh;
-  background:#b95c77
-}
-.hide{
-  display:none;
+.hide {
+	display: none;
 }
 
-.main-footer {
-	color: white;
+.footer-wrapper {
 	background-color: #b95c77;
-	padding: 10px;
 	width: 100%;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-	text-align: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	/* position:absolute; */
+	left: 0;
+	bottom: 0;
+	right: 0;
 }
 
-.quotes {
+.quote {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
 		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-	font-size: 19px;
+	color: #efedea;
+	font-size: 1.1rem;
 	font-style: normal;
-	font-weight: 300;
-	line-height: 19px;
 	letter-spacing: 0em;
 	text-align: center;
-	padding: 19px;
+	margin: 10px;
+}
+
+.icon-container {
+	align-self: center;
+	bottom: 0;
+	display: flex;
+	flex-direction: row;
 }
 
 .icon {
-	height: 45px;
-	width: 45px;
-	/*left: 200px;
-  top: 946px;*/
-	border-radius: 0px;
+	height: 70px;
+	width: auto;
+	padding: 10px;
+	margin-left: 50px;
 }
-.container {
-	display: flex;
-	font-weight: bold;
-	font-size: x-small;
-	/* bottom: 0; */
-	/* left: 0; */
-	width: 100%;
-	justify-content: space-evenly;
-	align-items: center;
-	padding: 15px;
-}
-
-/* .container > .icon {
-	padding: 1px;
-} */
 
 h2 {
 	display: inline-block;
@@ -66,70 +51,14 @@ h2 {
 	font-size: 16px;
 }
 
-/*----Mobile-----*/
-
+/* for mobile */
 @media screen and (max-width: 600px) {
-	.footerpage-container {
-		display: flex;
-		justify-content: center;
-		text-align: center;
-		height: 23vh;
-    
-	}
-  .hide{
-    display:block;
-  }
-
-	.main-footer {
-		color: white;
-		background-color: #b95c77;
-		padding-top: 2em;
-		padding-bottom: 2em;
-		bottom: 0;
-		width: 100%;
-		font-weight: bold;
-		font-size: 10px;
-	}
-
-	.quotes {
-		font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-			Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-		font-size: 15px;
-		font-style: normal;
-		font-weight: 300;
-		line-height: 19px;
-		letter-spacing: 0em;
-		text-align: center;
-		padding: 9px;
-	}
-
 	.icon {
-		height: 31px;
-		width: 31px;
-		/*left: 200px;
-  top: 946px;*/
-		border-radius: 0px;
+		height: 50px;
+		width: auto;
 	}
-	.container {
-		display: flex;
-		font-weight: bold;
-		font-size: x-small;
-		font-style: roboto serif;
-		position: center;
-		bottom: 0;
-		left: 0;
-		width: 100%;
-		justify-content: space-evenly;
-		align-items: center;
-	}
-	.container > .icon {
-		padding: 3px;
-	}
-	h2 {
-		display: inline-block;
-		line-height: 0.5;
-		font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-			Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-		font-weight: initial;
+
+	.hide {
+		display: block;
 	}
 }
