--- a/front-end/src/components/GameIntroPage.css
+++ b/front-end/src/components/GameIntroPage.css
@@ -1,61 +1,43 @@
-body {
-  background: url("https://res.cloudinary.com/octavian2111/image/upload/v1620120519/d62Jtrf_b4jbaq.jpg")
-    no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+.intro-page-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  min-height: 100vh;
+  background-image: url("https://res.cloudinary.com/octavian2111/image/upload/v1620122941/25ehEmx_rfvxwu.jpg");
 }
-.page-wrapper {
-  display: grid;
-  grid-template-columns: 1fr repeat(4, auto) 1fr;
-  grid-template-rows: 4fr repeat(4, auto) 1fr;
-  grid-gap: 20px;
+
+.game-intro-title {
+  font-size: 3rem;
+  align-self: center;
+  justify-self: center;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: Oswald;
+  font-weight: bolder;
+  text-shadow: -4px 0 #eedf5b;
+  color: #b95c77;
+  padding: 2rem;
 }
 
 .game-rules {
   border-radius: 1rem;
   width: 700px;
-  height: 300px;
+  height: auto;
   background-color: #efedea;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-weight: 400;
-  font-size: 1.5rem;
+  font-weight: 300;
+  font-size: 1.1rem;
   border: 1px solid #eedf5b;
   box-shadow: 0px 8px 15px rgb(0 0 0 / 10%);
-  grid-area: 3 / 2 / 4 / 4;
-  justify-self: center;
+  align-self: center;
   text-align: justify;
   padding: 20px;
   margin: 20px;
 }
 
 .level-select-text {
-  border-radius: 1rem;
-  width: 350px;
-  height: 70px;
-  background-color: #eedf5b;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-weight: 400;
-  font-size: 1.5rem;
-  border: 1px solid #efedea;
-  box-shadow: 0px 8px 15px rgb(0 0 0 / 10%);
-  grid-area: 4 / 2 / 4 / 4;
-  justify-self: center;
-  text-align: center;
-  padding: 20px;
-  margin: 20px;
-}
-
-.level-select-container {
-  grid-area: 5 / 2 / 6 / 4;
-  justify-self: center;
-}
-
-.level-button {
-  border-radius: 1rem;
+  border-radius: 2rem;
   width: 300px;
   height: 70px;
   background-color: #eedf5b;
@@ -65,7 +47,30 @@ body {
   font-size: 1.5rem;
   border: 1px solid #efedea;
   box-shadow: 0px 8px 15px rgb(0 0 0 / 10%);
-  grid-area: 4 / 2 / 4 / 4;
+
+  justify-self: center;
+  text-align: center;
+  padding: 20px;
+  margin: 20px;
+}
+
+.level-select-container {
+  display: flex;
+  justify-self: center;
+  align-self: center;
+}
+
+.level-button {
+  border-radius: 2rem;
+  width: 200px;
+  height: 70px;
+  background-color: #efedea;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: 400;
+  border: none;
+  font-size: 1.5rem;
+  box-shadow: 0px 8px 15px rgb(0 0 0 / 10%);
   justify-self: center;
   text-align: center;
   padding: 20px;
@@ -80,27 +85,25 @@ body {
 }
 
 @media screen and (max-width: 600px) {
-  .page-wrapper {
+  .intro-page-wrapper {
     display: flex;
     flex-direction: column;
-    justify-content: center;
   }
 
   .game-rules {
-    border-radius: 1rem;
+    border-radius: 2rem;
     width: auto;
     height: auto;
     background-color: #efedea;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
       Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    font-weight: 400;
-    font-size: 1.5rem;
+    font-weight: 3;
+    font-size: 1.2rem;
     border: 1px solid #eedf5b;
     box-shadow: 0px 8px 15px rgb(0 0 0 / 10%);
     justify-self: center;
     text-align: justify;
     padding: 20px;
-    margin: 20px;
   }
 
   .level-select-text {
@@ -112,6 +115,7 @@ body {
   }
 
   .level-select-container {
+    margin: 100px;
     display: flex;
     flex-direction: column;
     justify-content: center;
