--- a/front-end/src/components/Contact.css
+++ b/front-end/src/components/Contact.css
@@ -11,12 +11,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin:80px;
+  margin-left: 80px;
+  margin-right: 80px;
+  margin-top: 60px;
+  margin-bottom: 60px;
 }
 .image-container {
   display: flex;
   justify-self: center;
-
 }
 
 .contact-image {
@@ -37,15 +39,15 @@
   height: auto;
   padding: 18px;
   font-size: 2.5rem;
-	align-self: center;
-	justify-self: center;
-	text-align: center;
-	text-transform: uppercase;
-	font-family: Oswald;
-	font-weight: bolder;
-	text-shadow: -4px 0 #eedf5b;
-	color: #b95c77;
-	padding: 1rem;
+  align-self: center;
+  justify-self: center;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: Oswald;
+  font-weight: bolder;
+  text-shadow: -4px 0 #eedf5b;
+  color: #b95c77;
+  padding: 1rem;
   white-space: nowrap;
 }
 
@@ -67,7 +69,6 @@
   justify-content: center;
   padding: 16px;
   font-size: 1rem;
-  
 }
 input {
   display: flex;
@@ -87,8 +88,8 @@ textarea {
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   width: 300px;
   font-size: medium;
-  text-align:left;
-  padding:15px;
+  text-align: left;
+  padding: 15px;
   border-radius: 0.8rem;
 }
 
@@ -144,13 +145,12 @@ textarea {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin:0px;
+    margin: 0px;
   }
 
   .form-page {
     justify-content: center;
     align-items: center;
-    
   }
 
   .image-container {
@@ -178,15 +178,15 @@ textarea {
     width: 70%;
     height: auto;
     font-size: 2.5rem;
-	align-self: center;
-	justify-self: center;
-	text-align: center;
-	text-transform: uppercase;
-	font-family: Oswald;
-	font-weight: bolder;
-	text-shadow: -4px 0 #eedf5b;
-	color: #b95c77;
-	padding: 1rem;
+    align-self: center;
+    justify-self: center;
+    text-align: center;
+    text-transform: uppercase;
+    font-family: Oswald;
+    font-weight: bolder;
+    text-shadow: -4px 0 #eedf5b;
+    color: #b95c77;
+    padding: 1rem;
   }
 
   .form-container {
