--- a/front-end/src/components/Women-Info/womenInfo.css
+++ b/front-end/src/components/Women-Info/womenInfo.css
@@ -2,75 +2,78 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
 
 * {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 .bright-women {
-	font-size: 3rem;
-	align-self: center;
-	justify-self: center;
-	text-align: center;
-	text-transform: uppercase;
-	font-family: Oswald;
-	font-weight: bolder;
-	text-shadow: -4px 0 #eedf5b;
-	color: #b95c77;
-	padding: 2rem;
+  font-size: 3rem;
+  align-self: center;
+  justify-self: center;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: Oswald;
+  font-weight: bolder;
+  text-shadow: -4px 0 #eedf5b;
+  color: #b95c77;
+  padding: 2rem;
 }
 
 .all-women {
-	display: grid;
-	justify-content: center;
-	align-items: center;
-	margin-top: 10px;
-	text-align: -webkit-center;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+  text-align: -webkit-center;
 }
 
 .card-container {
-	display: grid;
-	grid-template-columns: auto auto auto auto;
-	margin-bottom: 2rem;
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  margin-bottom: 2rem;
 }
 
 .women-cards {
-	display: block;
-	width: 70%;
-	margin: 15px;
+  display: block;
+  width: 70%;
+  margin: 15px;
 }
 
 .woman-page {
-	display: grid;
-	grid-template-columns: auto auto;
-	margin: 2.5rem;
+  display: grid;
+  grid-template-columns: auto auto;
+  margin-left: 1.5rem;
+  margin-top: -4rem;
+  margin-bottom: -4rem;
+  height: 100vh;
 }
 
 .first-column {
-	display: grid;
-	justify-content: center;
-	align-items: center;
-	grid-column-start: 1;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  grid-column-start: 1;
 }
 
 .second-column {
-	display: inline-flex;
-	justify-content: center;
-	align-items: flex-start;
-	flex-flow: column;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-	padding: 2rem;
-	flex-wrap: wrap;
-	gap: 10px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-flow: column;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  padding: 2rem;
+  flex-wrap: wrap;
+  gap: 10px;
 }
 
 .info-img {
-	display: grid;
-	width: 100%;
-	height: auto;
-	justify-self: center;
-	align-self: center;
+  display: grid;
+  width: 100%;
+  height: auto;
+  justify-self: center;
+  align-self: center;
 }
 
 .women-name,
@@ -78,78 +81,78 @@
 .women-years,
 .women-nationality,
 .women-contribution {
-	padding: 0.3rem;
+  padding: 0.3rem;
 }
 
 .women-title {
-	font-size: 1.5rem;
-	align-self: center;
-	justify-self: center;
-	text-align: center;
+  font-size: 1.5rem;
+  align-self: center;
+  justify-self: center;
+  text-align: center;
 }
 
 .women-name {
-	font-size: 2rem;
-	align-self: center;
-	justify-self: center;
-	text-align: center;
-	text-transform: uppercase;
-	font-family: Oswald;
-	font-weight: bolder;
-	text-shadow: -4px 0 #eedf5b;
-	color: #b95c77;
+  font-size: 2rem;
+  align-self: center;
+  justify-self: center;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: Oswald;
+  font-weight: bolder;
+  text-shadow: -4px 0 #eedf5b;
+  color: #b95c77;
 }
 
 .women-nationality,
 .women-contribution {
-	font-size: 1rem;
-	align-self: center;
-	justify-self: center;
-	text-align: center;
-	white-space: wrap;
+  font-size: 1rem;
+  align-self: center;
+  justify-self: center;
+  text-align: center;
+  white-space: wrap;
 }
 
 .women-years {
-	font-size: 1rem;
-	align-self: center;
-	justify-self: center;
-	text-align: center;
-	white-space: nowrap;
+  font-size: 1rem;
+  align-self: center;
+  justify-self: center;
+  text-align: center;
+  white-space: nowrap;
 }
 .women-contribution {
-	text-align: justify;
-	line-height: 1.8rem;
-	padding: 0rem 1rem 0rem 1rem;
+  text-align: justify;
+  line-height: 1.8rem;
+  padding: 0rem 1rem 0rem 1rem;
 }
 
 @media screen and (max-width: 600px) {
-	.bright-women {
-		font-size: 2rem;
-	}
+  .bright-women {
+    font-size: 2rem;
+  }
 
-	.card-container {
-		grid-template-columns: auto auto;
-	}
+  .card-container {
+    grid-template-columns: auto auto;
+  }
 
-	.women-cards {
-		margin: 5px;
-	}
+  .women-cards {
+    margin: 5px;
+  }
 
-	.woman-page {
-		grid-template-columns: auto;
-		margin: 1rem;
-	}
+  .woman-page {
+    grid-template-columns: auto;
+    margin: 1rem;
+  }
 
-	.second-column {
-		grid-column-start: 1;
-		padding: 1rem;
-	}
+  .second-column {
+    grid-column-start: 1;
+    padding: 1rem;
+  }
 
-	.women-name,
-	.women-title,
-	.women-years,
-	.women-nationality,
-	.women-contribution {
-		padding: 0.5rem;
-	}
+  .women-name,
+  .women-title,
+  .women-years,
+  .women-nationality,
+  .women-contribution {
+    padding: 0.5rem;
+  }
 }
