--- a/front-end/src/components/Footer/Footer.css
+++ b/front-end/src/components/Footer/Footer.css
@@ -1,64 +1,66 @@
 @import url("https://fonts.googleapis.com/css2?family=Oswald&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
 
-.hide {
-	display: none;
+.footer-hide {
+  display: none;
 }
 
 .footer-wrapper {
-	background-color: #b95c77;
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	/* position:absolute; */
-	left: 0;
-	bottom: 0;
-	right: 0;
+  background-color: #b95c77;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* position:absolute; */
+  left: 0;
+  bottom: 0;
+  right: 0;
 }
 
 .quote {
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-	color: #efedea;
-	font-size: 1.1rem;
-	font-style: normal;
-	letter-spacing: 0em;
-	text-align: center;
-	margin: 10px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: #efedea;
+  font-size: 1.1rem;
+  font-style: normal;
+  letter-spacing: 0em;
+  text-align: center;
+  margin: 10px;
 }
 
 .icon-container {
-	align-self: center;
-	bottom: 0;
-	display: flex;
-	flex-direction: row;
+  align-self: center;
+  bottom: 0;
+  display: flex;
+  flex-direction: row;
 }
 
 .icon {
-	height: 70px;
-	width: auto;
-	padding: 10px;
-	margin-left: 50px;
+  height: 70px;
+  width: auto;
+  padding: 10px;
+  margin-left: 50px;
 }
 
 h2 {
-	display: inline-block;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-	font-weight: initial;
-	font-size: 16px;
+  display: inline-block;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: initial;
+  font-size: 16px;
 }
 
 /* for mobile */
 @media screen and (max-width: 600px) {
-	.icon {
-		height: 50px;
-		width: auto;
-	}
+  .icon {
+    height: 50px;
+    width: auto;
+  }
 
-	.hide {
-		display: block;
-	}
+  .footer-hide {
+    display: block;
+    padding: 5px;
+	background-color: #b95c77;
+  }
 }
