--- a/front-end/src/components/Memory/Memory.css
+++ b/front-end/src/components/Memory/Memory.css
@@ -11,7 +11,7 @@
 	background-image: url("https://i.imgur.com/25ehEmx.jpg");
 	background-position: center;
 	background-size: cover;
-	height: 100vh;
+	height: 100%;
 }
 
 .button-container {
